[project]
name = "TPool"
version = "1.5"
authors = [
  { name="Ahmad Alobaid", email="ahmad88me@gmail.com"},
]
description = "Pool for Threads"
readme = "README-pypi.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License"

]

[project.urls]
Homepage = "https://github.com/oeg-upm/TPool"
Issues = "https://github.com/oeg-upm/TPool/issues"
Documentation = "https://oeg-upm.github.io/TPool/"


[tool.setuptools.packages.find]
where = ["src"]
